--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_svg: ^2.1.0
+  freezed_annotation: ^3.0.0
+  go_router: ^15.1.3
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
+  build_runner: ^2.4.15
+  freezed: ^3.0.6
+  json_serializable: ^6.9.5
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/icons/
+
