--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   go_router: ^15.1.3
   json_annotation: ^4.9.0
   flutter_bloc: ^9.1.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
@@ -22,7 +23,6 @@ dev_dependencies:
   build_runner: ^2.4.15
   freezed: ^3.0.6
   json_serializable: ^6.9.5
-  flutter_bloc: ^9.1.1
 
 
 flutter:
