--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   json_annotation: ^4.9.0
   flutter_bloc: ^9.1.1
   intl: ^0.20.2
+  drift: ^2.27.0
+  drift_flutter: ^0.2.4
 
 dev_dependencies:
   flutter_test:
@@ -23,7 +25,7 @@ dev_dependencies:
   build_runner: ^2.4.15
   freezed: ^3.0.6
   json_serializable: ^6.9.5
-
+  drift_dev: ^2.27.0
 
 flutter:
   uses-material-design: true
