balance spoiler feature

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   intl: ^0.20.2
   drift: ^2.27.0
   drift_flutter: ^0.2.4
+  sensors_plus: ^6.1.1
 
 dev_dependencies:
   flutter_test:
