added splash screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,15 @@ dev_dependencies:
   freezed: ^3.0.6
   json_serializable: ^6.9.5
   drift_dev: ^2.27.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
   assets:
     - assets/icons/
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/app_icon.png"
 
