--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   shake_gesture: ^1.0.0
   fuzzy: ^0.5.1
   fl_chart: ^0.66.0
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
