--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   drift_dev: ^2.27.0
   connectivity_plus: ^6.1.4
   provider: ^6.1.5
+  worker_manager: ^7.2.6
 
 dev_dependencies:
   flutter_test:
