--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   flutter_svg: ^2.1.0
   freezed_annotation: ^3.0.0
   go_router: ^15.1.3
@@ -27,6 +29,10 @@ dependencies:
   connectivity_plus: ^6.1.4
   provider: ^6.1.5
   worker_manager: ^7.2.6
+  flutter_colorpicker: ^1.0.3
+  flutter_secure_storage: ^9.2.2
+  local_auth: ^2.2.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
